# End-to-end-Machine-Learning-Project-with-MLflow

./: .gitignore  DEPLOY_INSTRUCTIONS.md  README.md  app.py  app_log.txt  flask_info.txt  log_end.txt  processes.txt  pyproject.toml  requirements.txt  setup.py
.git copy/: FETCH_HEAD  config  index  packed-refs
.git copy/logs/: HEAD
.git copy/logs/refs/remotes/origin/: HEAD  main
.git copy/objects/pack/: pack-01ec9fa36fcf5328fa40ddecdfd997a115f89b90.idx  pack-01ec9fa36fcf5328fa40ddecdfd997a115f89b90.pack
.git copy/refs/remotes/origin/: main
src/mlProject/: __init__.py
static/css/: modern_style.css
templates/: index.html  results.html
