[project]
name = "ml-project"
version = "0.1.0"
description = "Machine Learning Project"
readme = "README.md"
authors = [
    {name = "MadanAyyanavara", email = "entbappy73@gmail.com"}
]
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "python-box==6.0.2",
    "pyYAML",
    "tqdm",
    "ensure==1.0.2",
    "joblib",
    "types-PyYAML",
    "Flask",
    "Flask-Cors"
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
